nginx-docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-docs
  namespace: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        # image: nginx:alpine
        image: ghcr.io/kubernetista/nuvola-docs:latest
        ports:
        - containerPort: 80
        # volumeMounts:
        # - name: nginx-docs-index
        #   mountPath: /usr/share/nginx/html/index.html
        #   subPath: index.html
      # volumes:
      # - name: nginx-docs-index
      #   configMap:
      #     name: nginx-docs-index
