nginx-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-docs
  namespace: docs
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
