nginx-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-docs
  namespace: docs
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-docs
            port:
              number: 80
  - host: docs.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-docs
            port:
              number: 80
